Final change to correct breadcrumb contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,7 +395,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #024c8d;
     text-decoration: none;
 }
 
